package co.edu.umanizales.ecobin_csv_api.model;

/** Estados posibles de una misión. */
public enum MissionStatus { ACTIVE, PAUSED, FINISHED }
