package co.edu.umanizales.ecobin_csv_api.model;

/** Estados posibles de un canje. */
public enum RedemptionStatus { REQUESTED, APPROVED, DELIVERED, REJECTED }
