package co.edu.umanizales.ecobin_csv_api.model;

/** Roles del sistema. */
public enum Role { ADMIN, OPERATOR, CITIZEN }
